2009-10-24  Doug Evans  <dje@sebabeach.org>

	* gen-all-doc: Add sh.cpu.
	* gen-all-desc: Use cpu/sh.cpu instead of ../cpu/sh.cpu
	(until ../cpu/sh.cpu is updated and cpu/sh.cpu is deleted).

	* sid-cpu.scm (/gen-sem-case): Tweaking debugging printf.
	(/gen-sfrag-case): Ditto.
	* sim-cpu.scm (/gen-sem-case): Ditto.

	* doc/rtl.texi: Add note that different ifields, operands, insns,
	and minsns may occur with the same name in different isas.
	Add note on the canonical form of rtl expressions.

2009-10-23  Doug Evans  <dje@sebabeach.org>

	* desc-cpu.scm (/gen-hash-defines): Remove #include of cgen-bitset.h.
	* sid-cpu.scm (cgen-desc.h): Update location of cgen's bitset.h.

	* decode.scm: Tweak various comments.
	(/opcode-slots): Add FIXME.
	(/build-decode-table-guts): Add assert.
	* utils-sim.scm (/gen-set-itype-and-extract): New function.
	(/gen-bracketed-set-itype-and-extract): New function.
	(/gen-decode-default-entry): Rewrite.
	(/table-guts-to-mask, /all-opcode-bits-used?): New functions.
	(/gen-decode-insn-entry): New arg table-guts-thus-far, all callers
	updated.  Don't unnecessarily emit check for whether all opcode bits
	have been examined.
	(/gen-decode-expr-set-itype): Delete.
	(/gen-decode-expr-entry): Update.
	(/gen-decode-table-entry): New arg table-guts-thus-far, all callers
	updated.  Keep track of decoder tables used thus far.
	(/gen-decoder-switch): Ditto.
	* utils.scm (word-bit-value): New function.

2009-10-14  Doug Evans  <dje@sebabeach.org>

	* ifield.scm (<ifield>, value): Provide default initial value.
	(ifield-encode-mode): Delete
	(ifield-decode-mode): Delete duplicate definition.
	(<derived-ifield>, 'make!): Initialize members encode, decode.
	* opcode.scm (<ifield>, 'gen-insert): Use ifld-decode-mode instead of
	ifld-encode-mode.
	(<multi-ifield>, 'gen-insert): Ditto.
	
2009-10-05  Dave Korn  <dave.korn.cygwin@googlemail.com>

	* sim-model.scm (@cpu@_prepare_run): Use @prefix@, not @cpu@,
	for @foo@_init_idesc_table.
